behavioural patterns till memento

--- a/design-patterns/behavioral-patterns.ipynb
+++ b/design-patterns/behavioral-patterns.ipynb
@@ -12,9 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Executed Method 2!\n",
+      "Executed Method 1!\n",
+      "Value x1\n",
+      "Value x2\n",
+      "executed method 1!\n"
+     ]
+    }
+   ],
    "source": [
     "class Catalog:\n",
     "    def __init__(self, param):\n",
@@ -117,27 +129,8 @@
     "\n",
     "    def main(self):\n",
     "        self._static_method_choices[self.param].__get__(None, self.__class__)()\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Executed Method 2!\n",
-      "Executed Method 1!\n",
-      "Value x1\n",
-      "Value x2\n",
-      "executed method 1!\n"
-     ]
-    }
-   ],
-   "source": [
+    "        \n",
+    "\n",
     "def main():\n",
     "    test0 = Catalog('param_value_2')\n",
     "    test0.main_method()\n",
@@ -156,6 +149,436 @@
     "    \n",
     "    test5 = CatalogStatic('param_value_2')\n",
     "main()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chain of Responsibility"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=7)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import abc\n",
+    "\n",
+    "\n",
+    "class Handler(metaclass=abc.ABCMeta):\n",
+    "    def __init__(self, successor=None):\n",
+    "        self.successor = successor\n",
+    "        \n",
+    "    def handle(self, request):\n",
+    "        res = self.check_range(request)\n",
+    "        if not res and self.successor:\n",
+    "            self.successor.handle(request)\n",
+    "    \n",
+    "    @abc.abstractmethod\n",
+    "    def check_range(self, request):\n",
+    "        pass\n",
+    "    \n",
+    "\n",
+    "class ConcreteHandler0(Handler):\n",
+    "    @staticmethod\n",
+    "    def check_range(request):\n",
+    "        if 0 <= request < 10:\n",
+    "            print(f\"request {request} handled in handler 0\")\n",
+    "            return True\n",
+    "\n",
+    "        \n",
+    "class ConcreteHandler1(Handler):\n",
+    "    \"\"\"... With it's own internal state\"\"\"\n",
+    "\n",
+    "    start, end = 10, 20\n",
+    "\n",
+    "    def check_range(self, request):\n",
+    "        if self.start <= request < self.end:\n",
+    "            print(f\"request {request} handled in handler 1\")\n",
+    "            return True\n",
+    "\n",
+    "class ConcreteHandler2(Handler):\n",
+    "    def check_range(self, request):\n",
+    "        start, end = self.get_interval_from_db()\n",
+    "        if start <= request < end:\n",
+    "            print(f\"request {request} handled in handler 2\")\n",
+    "            return True\n",
+    "    \n",
+    "    @staticmethod\n",
+    "    def get_interval_from_db():\n",
+    "        return (20, 30)\n",
+    "    \n",
+    "\n",
+    "class FallbackHandler(Handler):\n",
+    "    @staticmethod\n",
+    "    def check_range(request):\n",
+    "        print(f\"End of Chain, No Handler for {request!r}\")\n",
+    "        return False\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    >>> h0 = ConcreteHandler0()\n",
+    "    >>> h1 = ConcreteHandler1()\n",
+    "    >>> h2 = ConcreteHandler2(FallbackHandler())\n",
+    "    >>> h0.successor = h1\n",
+    "    >>> h1.successor = h2\n",
+    "    >>> requests = [2, 5, 14, 22, 18, 3, 35, 27, 20]\n",
+    "    >>> for request in requests:\n",
+    "    ...     h0.handle(request)\n",
+    "    request 2 handled in handler 0\n",
+    "    request 5 handled in handler 0\n",
+    "    request 14 handled in handler 1\n",
+    "    request 22 handled in handler 2\n",
+    "    request 18 handled in handler 1\n",
+    "    request 3 handled in handler 0\n",
+    "    End of Chain, No Handler for 35\n",
+    "    request 27 handled in handler 2\n",
+    "    request 20 handled in handler 2\n",
+    "    \"\"\"\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod(optionflags=doctest.ELLIPSIS)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chaining Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=3)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self, name, action):\n",
+    "        self.name = name\n",
+    "        self.action = action\n",
+    "        \n",
+    "    \n",
+    "    def do_action(self):\n",
+    "        print(self.name, self.action.name, end=' ')\n",
+    "        return self.action\n",
+    "    \n",
+    "\n",
+    "class Action:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def amount(self, val):\n",
+    "        print(val, end=' ')\n",
+    "        return self\n",
+    "    \n",
+    "    def stop(self):\n",
+    "        print('then stop')\n",
+    "\n",
+    "\n",
+    "def main():\n",
+    "    \"\"\"\n",
+    "    >>> move = Action('move')\n",
+    "    >>> person = Person('Jack', move)\n",
+    "    >>> person.do_action().amount('5m').stop()\n",
+    "    Jack move 5m then stop\n",
+    "    \"\"\"\n",
+    "\n",
+    "import doctest\n",
+    "doctest.testmod()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iterator Pattern"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--------------------\n",
+      "Calling <function count_to at 0x112502d30> with (2,), {}\n",
+      "Returned <function count_to at 0x112502d30> with <generator object count_to at 0x112583890>\n",
+      "--------------------\n",
+      "0\n",
+      "1\n",
+      "--------------------\n",
+      "Calling <function count_to at 0x112502d30> with (5,), {}\n",
+      "Returned <function count_to at 0x112502d30> with <generator object count_to at 0x112583d60>\n",
+      "--------------------\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import functools\n",
+    "\n",
+    "\n",
+    "def debug(func):\n",
+    "    @functools.wraps(func)\n",
+    "    def wrapper(*args, **kwargs):\n",
+    "        print(\"--\"*10)\n",
+    "        print(f\"Calling {func!r} with {args!r}, {kwargs!r}\")\n",
+    "        value = func(*args, **kwargs)\n",
+    "        print(f\"Returned {func!r} with {value!r}\")\n",
+    "        print(\"--\"*10)\n",
+    "        return value\n",
+    "    return wrapper\n",
+    "\n",
+    "@debug\n",
+    "def count_to(count):\n",
+    "    for number in range(0, count):\n",
+    "        yield number\n",
+    "\n",
+    "# Test the generator\n",
+    "count_to_two = lambda: count_to(2)\n",
+    "count_to_five = lambda: count_to(5)\n",
+    "\n",
+    "for number in count_to_two():\n",
+    "    print(number)\n",
+    "    \n",
+    "for number in count_to_five():\n",
+    "    print(number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Iterator Pattern using Python Native Structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n",
+      "four\n",
+      "five\n",
+      "--------------------------------------------------\n",
+      "one\n",
+      "two\n",
+      "three\n",
+      "four\n",
+      "five\n",
+      "six\n"
+     ]
+    }
+   ],
+   "source": [
+    "class NumberWords:\n",
+    "    \n",
+    "    _WORD_MAP = ('one', 'two', 'three', 'four', 'five', 'six')\n",
+    "    \n",
+    "    def __init__(self, start, stop):\n",
+    "        self.start = start\n",
+    "        self.stop = stop\n",
+    "    \n",
+    "    def __iter__(self):\n",
+    "        return self\n",
+    "    \n",
+    "    def __next__(self):\n",
+    "        if self.start > self.stop or self.start > len(self._WORD_MAP):\n",
+    "            raise StopIteration\n",
+    "        \n",
+    "        current = self.start\n",
+    "        self.start += 1\n",
+    "        return self._WORD_MAP[current-1]\n",
+    "\n",
+    "for number in NumberWords(start=1, stop=5):\n",
+    "    print(number)\n",
+    "\n",
+    "print('-'*50)\n",
+    "    \n",
+    "for number in NumberWords(start=1, stop=50):\n",
+    "    print(number)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mediator\n",
+    "\n",
+    "Communicating with a mediator / broker. reduces coupling and complexity only handles by mediator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[alamin says]: Hi\n",
+      "[anika says]: Hi Back!\n",
+      "[anamika says]: Howdy! :)\n"
+     ]
+    }
+   ],
+   "source": [
+    "class User:\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        self.chat_room = ChatRoom()\n",
+    "    \n",
+    "    def say(self, message):\n",
+    "        self.chat_room.display_message(self, message)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return self.name\n",
+    "    \n",
+    "class ChatRoom:\n",
+    "    def display_message(self, user, message):\n",
+    "        print(f\"[{user} says]: {message}\")\n",
+    "\n",
+    "alamin = User('alamin')\n",
+    "anika = User('anika')\n",
+    "anamika = User('anamika')\n",
+    "\n",
+    "alamin.say('Hi')\n",
+    "anika.say('Hi Back!')\n",
+    "anamika.say('Howdy! :)')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Memento\n",
+    "\n",
+    "Provides the ability to restore an object to its previous state"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'NumObj' --> 0\n",
+      "[<function memento.<locals>.rollback at 0x10726d430>]\n",
+      "'NumObj' --> 3\n",
+      "[<function memento.<locals>.rollback at 0x10726d940>]\n",
+      "'NumObj' --> 6\n",
+      "'NumObj' --> 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from copy import deepcopy, copy\n",
+    "\n",
+    "\n",
+    "class NumObj:\n",
+    "    def __init__(self, value):\n",
+    "        self.value = value\n",
+    "        \n",
+    "    def increment(self):\n",
+    "        self.value += 1\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"{self.__class__.__name__!r} --> {self.value}\"\n",
+    "\n",
+    "        \n",
+    "def memento(obj, deep=False):\n",
+    "    state = deepcopy(obj.__dict__) if deep else copy(obj.__dict__)\n",
+    "\n",
+    "    def rollback():\n",
+    "        obj.__dict__.clear()\n",
+    "        obj.__dict__.update(state)\n",
+    "    \n",
+    "    return rollback\n",
+    "\n",
+    "\n",
+    "class Transaction:\n",
+    "    states = []\n",
+    "    deep = False\n",
+    "\n",
+    "    def __init__(self, deep, *targets):\n",
+    "        self.deep = deep\n",
+    "        self.targets = targets\n",
+    "        self.commit()\n",
+    "        \n",
+    "    def commit(self):\n",
+    "        self.states = [memento(target, self.deep) for target in self.targets]\n",
+    "        print(self.states)\n",
+    "        \n",
+    "    def rollback(self):\n",
+    "        for state in self.states:\n",
+    "            state()\n",
+    "\n",
+    "\n",
+    "n = NumObj(0)\n",
+    "print(n)\n",
+    "\n",
+    "t = Transaction(False, n)\n",
+    "\n",
+    "try:\n",
+    "    n.increment()\n",
+    "    n.increment()\n",
+    "    n.increment()\n",
+    "    print(n)\n",
+    "\n",
+    "    t.commit()\n",
+    "\n",
+    "    n.increment()\n",
+    "    n.increment()\n",
+    "    n.increment()\n",
+    "    print(n)\n",
+    "\n",
+    "    n.value += 'x'\n",
+    "except Exception:\n",
+    "    t.rollback()\n",
+    "    print(n)"
    ]
   }
  ],
